-------------
Version 0.6.7
-------------
- Improved the cURL get_site function to support POST and Login.
- Added a Link for turning LFT on in click to join blob, can be disabled under settings.
- Autoinvites users who apear to have LD during a Raid.


-------------
Version 0.6.6
-------------
- Add detection of missing config file and try to detect if config file was not read properly.
- Added setting for what raid types to show in raid control start raid links
- Added a best match function to tools module
- Added waypoint support to rally
- Added a General queue module Changed chatqueue buddy_queue and masmsg (invites) to use
- Fixed login in AoC after patch 1.05.6


-------------
Version 0.6.5
-------------
- Fixed date format for !whois -> last online (aoc only)
- Added missing version info in !about (not currently used for stable release versions)
- Backported some more fixes for various PHP notices when running with higher error reporting levels enabled.
- Fixed a bug causing the internal buddylist count to be off, which in turn meant roster updates would run every hour for busy bots.
- Fix the bug causing !list output for the AO loot module to not have clickable item references.
- Fix a bug #417476 causing IRC nickname changes to ignore AnnounceTo setting. Reported by Getrix.

API Changes:
- make_item again accepts the optional fifth argument for alternative quoting.


-------------
Version 0.6.4
-------------
- Modified the network protocol to work with AoC 1.05
  Please note that PrivGroup relays are no longer an option for AoC due to chatserver changes.
- Reversing stripping of control characters on text from IRC for now.
- htmlspecialchars_decode text going to IRC to decode &amp; and similar.
- IRC join/part/quit messages now properly prefixed on IRC and are also relayed over guild relay if UseGuildRelay is set for IRC module.
- IRC part/quit messages are now relayed ingame.
- Fixed flip command
- Added the option to make reason required for !ban add